# ATProject

./: .editorconfig  .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  ADMIN_COMMANDS.md  ARCHITECTURE.md  CLAUDE.md  DATABASE_SETUP.md  DEPLOYMENT.md  DJANGO_ADMIN_MIGRATION.md  Dockerfile  GEMINI-IMPROVEMENTS.md  LICENSE  LOGGING_STRATEGY.md  Procfile  ROADMAP.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.dev.yml  docker-entrypoint.sh  manage.py  nixpacks.toml  package-lock.json  package.json  postcss.config.js  pyproject.toml  railpack.json  railway.json  railway.toml  requirements.txt  start_celery.bat  start_celery.sh
ATProject/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/: TEST_PLAN.md
engine/: admin.py  apps.py  metadata_extractor.py  models.py  signals.py  similarity.py  storage_utils.py  tasks.py  urls.py  utils.py  views.py
engine/admin/: __init__.py  asset.py  mixins.py  page.py  post.py  task_result.py  taxonomy.py
engine/api/: auth.py  presigned.py  urls.py  views.py
engine/links/: __init__.py  extractor.py
engine/markdown/: config.py  renderer.py
engine/migrations/: 0001_initial.py  0002_assettag_assetcollection_assetfolder_and_more.py  0003_remove_asset_engine_asse_collect_90df62_idx_and_more.py  0004_remove_asset_tags.py  0005_add_internal_link_model.py  0006_add_section_context_to_internal_link.py  0007_simplify_internal_link_model.py  0008_post_abstract_post_completion_status_and_more.py  0009_post_first_line_caps.py  0012_page_model.py  (+5 more)
posts-md/: lorem-ipsum-admonitions.md  lorem-ipsum-block-elements  lorem-ipsum-headers  lorem-ipsum-inline-markup  test.html
templates/: backlinks.html  base.html  index.html  page.html  page_metadata.html  sidebar.html
(+92 files in other folders)
