[project]
name = "atproject"
version = "0.1.0"
description = "A personal place for all my thoughts"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "black>=25.9.0",
    "bleach>=6.2.0",
    "boto3>=1.40.49",
    "celery>=5.5.3",
    "celery-types==0.23.0",
    "django==5.2.7",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-environ>=0.12.0",
    "django-storages>=1.14.6",
    "djlint>=1.36.4",
    "ffprobe>=0.5",
    "flower>=2.0.1",
    "isort>=6.0.1",
    "markdown>=3.9",
    "pillow>=11.3.0",
    "pre-commit>=4.3.0",
    "psycopg2-binary>=2.9.10",
    "pygments>=2.19.2",
    "pypandoc>=1.15",
    "python-dateutil>=2.9.0",
    "redis>=6.4.0",
    "ruff>=0.13.3",
    "whitenoise[brotli]>=6.11.0",
]
