[project]
name = "atproject"
version = "0.1.0"
description = "A personal place for all my thoughts"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "bleach>=6.1.0",
    "boto3>=1.35.0",
    "celery>=5.4.0",
    "django>=5.1.0",
    "django-celery-beat>=2.7.0",
    "django-celery-results>=2.5.0",
    "django-environ>=0.11.0",
    "django-storages>=1.14.0",
    "gunicorn>=23.0.0",
    "pillow>=10.4.0",
    "psycopg2-binary>=2.9.9",
    "pygments>=2.18.0",
    "pypandoc>=1.14",
    "python-dateutil>=2.9.0",
    "redis>=5.2.0",
    "whitenoise[brotli]>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "celery-types>=0.22.0",
    "djlint>=1.36.0",
    "ffprobe>=0.5",
    "flower>=2.0.1",
    "isort>=5.13.0",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
